Fix extra space below previews

--- a/src/variable-preview/styles.scss
+++ b/src/variable-preview/styles.scss
@@ -18,4 +18,8 @@
     display: block;
     margin: auto;
   }
+
+  svg {
+    display: block;
+  }
 }
